--- a/.github/workflows/build-qmodem-aarch64-generic.yml
+++ b/.github/workflows/build-qmodem-aarch64-generic.yml
@@ -4,10 +4,10 @@ on:
   workflow_dispatch:
 
 env:
-  OPENWRT_VERSION: 24.10.5
-  TARGET: armsr
-  SUBTARGET: armv8
-  SDK_URL: https://downloads.openwrt.org/releases/24.10.5/targets/armsr/armv8/openwrt-sdk-24.10.5-armsr-armv8_gcc-13.3.0_musl.Linux-x86_64.tar.zst
+  OPENWRT_VERSION: "24.10.5"
+  TARGET: "armsr"
+  SUBTARGET: "armv8"
+  SDK_URL: "https://downloads.openwrt.org/releases/24.10.5/targets/armsr/armv8/openwrt-sdk-24.10.5-armsr-armv8_gcc-13.3.0_musl.Linux-x86_64.tar.zst"
 
 jobs:
   build:
@@ -17,19 +17,28 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Install build deps
+      - name: Install dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y \
             build-essential clang flex bison g++ gawk gcc-multilib gettext \
             git libncurses5-dev libssl-dev python3 python3-distutils rsync \
-            unzip zlib1g-dev file wget curl qemu-utils zstd
+            unzip zlib1g-dev file wget curl zstd ca-certificates patch \
+            pkgconf ccache xz-utils
 
-      - name: Download and extract OpenWrt SDK
+      - name: Show runner info
         run: |
-          wget -O sdk.tar.zst "$SDK_URL"
-          tar --use-compress-program=unzstd -xf sdk.tar.zst
+          uname -a
+          df -h
+          free -h
+
+      - name: Download OpenWrt SDK
+        run: |
+          wget -O openwrt-sdk.tar.zst "$SDK_URL"
+          tar --use-compress-program=unzstd -xf openwrt-sdk.tar.zst
           mv openwrt-sdk-* sdk
+          test -d sdk
+          ls -lah sdk
 
       - name: Add QModem feed
         working-directory: ./sdk
@@ -38,32 +47,44 @@ jobs:
           ./scripts/feeds update qmodem
           ./scripts/feeds install -a -f -p qmodem
 
-      - name: Configure package selection
+      - name: Inspect installed qmodem feed
         working-directory: ./sdk
         run: |
-          cat >> .config << 'EOF'
-          CONFIG_ALL_NONSHARED=n
-          CONFIG_ALL_KMODS=n
+          echo "=== package/feeds/qmodem ==="
+          find package/feeds/qmodem -maxdepth 2 -type f \( -name "Makefile" -o -name "Config.in" \) | sort || true
+          echo "=== qmodem package directories ==="
+          find package/feeds/qmodem -mindepth 1 -maxdepth 1 -type d | sort || true
+
+      - name: Minimal config for feed build
+        working-directory: ./sdk
+        run: |
+          cat > .config << 'EOF'
           CONFIG_ALL=n
-          CONFIG_PACKAGE_luci-app-qmodem=m
-          CONFIG_PACKAGE_luci-app-qmodem-sms=m
+          CONFIG_ALL_KMODS=n
+          CONFIG_ALL_NONSHARED=n
+          CONFIG_DEVEL=n
+          CONFIG_CCACHE=y
           EOF
           make defconfig
 
-      - name: Compile QModem packages
+      - name: Compile entire qmodem feed
         working-directory: ./sdk
         run: |
-          make package/feeds/qmodem/luci-app-qmodem/compile V=s -j"$(nproc)"
-          make package/feeds/qmodem/luci-app-qmodem-sms/compile V=s -j"$(nproc)"
+          make package/feeds/qmodem/compile V=s -j1
 
-      - name: Collect built IPKs
+      - name: Collect IPKs
         run: |
           mkdir -p output
-          find sdk/bin/packages -type f -name "*.ipk" | sort
+          find sdk/bin/packages -type f -name "*.ipk" | sort | tee output/ipk-list.txt
           find sdk/bin/packages -type f -name "*.ipk" -exec cp -v {} output/ \;
+          echo "=== Output files ==="
+          ls -lah output
 
-      - name: Upload artifact
+      - name: Upload IPK artifact
         uses: actions/upload-artifact@v4
         with:
           name: qmodem-aarch64-generic-ipk
-          path: output/*.ipk
+          path: |
+            output/*.ipk
+            output/ipk-list.txt
+          if-no-files-found: error
